--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "react": "^18.3.1",
